objects/EXPRN__Product_Options__c.object
<CustomObject>
    <description>Stores different product and its product options</description>
    <fields>
        <fullName>EXPRN__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_Configuration__c</fullName>
        <label>BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipName>Product_Option</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Is_Blended_Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks whether the particular report type is both commercial and blended or not</description>
        <label>Is Blended Commercial?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Product_Number__c</fullName>
        <description>Unique number of report type</description>
        <label>Product Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__Product_Option__c</fullName>
        <description>Product Option for different co- product options</description>
        <label>Product Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Experian Product Option</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Co- Product Options</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Product Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>